# main/http_server/axe-os/src/app/services/system.service.ts
@@ -170,6 +170,7 @@ export class SystemApiService {
         useFallbackStratum: 0,
         poolConnectionInfo: "IPv4 (TLS)",
         primaryPoolError: "",
+        poolBanner: "",
         frequency: 485,
         actualFrequency: 485,
         version: "v2.12.0",
